[tool.ruff]
# Paths to exclude
exclude = [
    "notebooks/",
    "**/__init__.py"
]
lint.extend-select = ["I"]

[tool.uv.sources]
pynguin = {path = "pynguin_0_41_0", editable = true }

[project]
name = "penguin_and_seeding"
requires-python = "==3.10"
version = "1.0"
dependencies = [
    "astroid>=3.3.10",
    "coverage>=7.9.1",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "pynguin",
]
